<resources>
    <string name="app_name">Recipe</string>
    <string name="button_addRecipe">Add Recipe</string>
    <string name="hint_recipeTitle">Recipe Title</string>
    <string name="hint_recipeDescription">Description of recipe </string>
    <string name="hint_ingredients">Ingredient</string>
    <string name="hint_recipeCalories">Calories </string>
    <string name="menu_addRecipe">Add</string>
    <string name="menu_cancelRecipe">Go back</string>
    <string name="enter_recipe_title"> Please enter a Recipe Title </string>
    <string name="save_recipe"> Save Recipe </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_recipe_image">Select recipe image</string>
    <string name="change_recipe_image">Change recipe image</string>
    <string name="menu_deleteRecipe">Delete</string>
    <string name="menu_recipeGallery">Gallery</string>
    <string name="title_activity_recipe_gallery">Recipe Gallery</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>